# qmc

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  Sidi.nb  configure.ac  make_singleheader.py
check/: Makefile  Makefile.am  README  README.md  test_mul_mod.cpp  test_qmc.cpp
check/qmc_complex/: Makefile.conf
check/qmc_core/: Makefile  Makefile.conf  test_qmc_core.cpp
check/qmc_fit/: Makefile.conf  test_qmc_fit.cpp
examples/: 1000_genz_demo.cpp  100_hh_sector_demo.cpp  101_ff4_demo.cpp  102_ff2_demo.cpp  103_evaluate_demo.cpp  103_hj_double_box.cpp  10_evaluate_demo.cpp  11_batching_demo.cpp  12_generatingvectors_medianQmc_demo.cpp  12_generatingvectors_medianqmc_demo.cpp  1_minimal_demo.cpp  2_complex_demo.cpp  3_defaults_demo.cpp  4_cuba_demo_functors.cpp  4_fitfunctions_demo.cpp  4_transform_demo.cpp  5_cuba_demo_pointers.cpp  5_cuba_functors_demo.cpp  5_generatingvectors_demo.cpp  6_cuba_functors_demo.cpp  6_cuba_pointers_demo.cpp  7_accuracy_demo.cpp  7_cuba_pointers_demo.cpp  7_hh_sector.cpp  8_accuracy_demo.cpp  8_ff4.cpp  9_boost_minimal_demo.cpp  9_generatingvectors_demo.cpp  README.md  accuracy_demo.cpp  basic_demo.cpp  complex_demo.cpp  cuba_demo.cpp  hh_sector.cpp  minimal_demo.cpp
src/: Makefile.am  libqmc.cpp  members.hpp  mul_mod.cpp  mul_mod.hpp  qmc.cpp  qmc.hpp  qmc_complex.cpp  qmc_complex.hpp  qmc_core.hpp  qmc_core_gpu.hpp  qmc_default.cpp  qmc_errormode.hpp  qmc_generating_vectors.cpp  qmc_generating_vectors.hpp  qmc_logger.hpp  qmc_members.hpp  qmc_mul_mod.hpp  qmc_real.hpp  qmc_result.hpp  qmc_transform.hpp
(+65 files in other folders)
